--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 	<li>Research on Differential Equation
 
 		<ul>
-			<li>A neural network solution to initial value problem for higher order ordinary differential equations</li>
+			<li><a href="https://sylphrena.github.io/researchpapers/A_neural_network_solution_to_initial_value%20problem_for_higher_order_ordinary_differential_equations.pdf">A neural network solution to initial value problem for higher order ordinary differential equations</a></li>
 		</ul></li>
 	<li>Research on Alzheimer’s Disease in Beijing Institute of Technology
 
 		<ul>
-			<li>Brain Sort - An Automatic Analysis Toolkit for AD Neuroimaging Data</li>
-			<li>A support vector machine-based method to identify subjective cognitive decline with multi-modal</li>
+			<li><a href="https://sylphrena.github.io/researchpapers/Brain_Sort-An_Automatic_Analysis_Toolkit_for_AD_Neuroimaging_Data.pdf">Brain Sort - An Automatic Analysis Toolkit for AD Neuroimaging Data</a></li>
+			<li><a href="https://sylphrena.github.io/researchpapers/A_support_vector_machine_based-method_to_identify_subjective_cognitive_decline_with_multi-modal_imaging.pdf">A support vector machine-based method to identify subjective cognitive decline with multi-modal</a></li>
 		</ul></li>
 	<li>Extended Essay on Artificial Intelligence (AI), consciousness, and self-consciousness
 
 		<ul>
-			<li>The criteria for Artificial Intelligence to possess consciousness and self-consciousness as conditions of personhood</li>
+			<li><a href="https://sylphrena.github.io/researchpapers/The_criteria_for_Artificial_ntelligence_to_possess_consciousness_and_self-consciousness_as_conditions_of_personhood.pdf">The criteria for Artificial Intelligence to possess consciousness and self-consciousness as conditions of personhood</a></li>
 		</ul></li>
 	<li>Research on AQI index in Shanghai (Chinese)
 
 		<ul>
-			<li>上海市空气质量状况分析与预测</li>
+			<li><a href="https://sylphrena.github.io/researchpapers/%E4%B8%8A%E6%B5%B7%E5%B8%82%E7%A9%BA%E6%B0%94%E8%B4%A8%E9%87%8F%E7%8A%B6%E5%86%B5%E5%88%86%E6%9E%90%E4%B8%8E%E9%A2%84%E6%B5%8B.pdf">上海市空气质量状况分析与预测</a></li>
 		</ul></li>
 	<li>Research on procrastination (Chinese)
 
 		<ul>
-			<li>Pronuncinator 研究报告</li>
+			<li><a href="https://sylphrena.github.io/researchpapers/Pronuncinator_%E7%A0%94%E7%A9%B6%E6%8A%A5%E5%91%8A.pdf">Pronuncinator 研究报告</a></li>
 		</ul></li>
 </ol>
 
