--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 <body>
 <h1>Research papers</h1>
 
+<h2>Philosophy</h2>
+
+<ol>
+	<li>Extended Essay on Artificial Intelligence (AI), consciousness, and self-consciousness
+
+		<ul>
+			<li><a href="https://sylphrena.github.io/researchpapers/The_criteria_for_Artificial_ntelligence_to_possess_consciousness_and_self-consciousness_as_conditions_of_personhood.pdf">The criteria for Artificial Intelligence to possess consciousness and self-consciousness as conditions of personhood</a></li>
+		</ul></li>
+	<li>Research on Language and World View
+
+		<ul>
+			<li><a href="https://sylphrena.github.io/researchpapers/To_what_extent_does_the_structure_of_a_language_affect_its_speakers%E2%80%99_world_view_or_cognition.pdf">To what extent does the structure of a language affect its speakers’ world view or cognition?</a></li>
+		</ul></li>
+	<li>Research on Self-Consciousness of Koko (Gorilla)
+
+		<ul>
+			<li><a href="https://sylphrena.github.io/researchpapers/Self-consciousness%E2%80%94a%20necessary_condition_of_personhood.pdf">Self-consciousness—a necessary condition of personhood, Whether Koko the gorilla possesses it and How the MSR test fails to prove it</a></li>
+		</ul></li>
+</ol>
+
+<h2>Mathematics &amp; Computer Science</h2>
+
 <ol>
 	<li>Research on Differential Equation
 
@@ -21,16 +43,16 @@
 			<li><a href="https://sylphrena.github.io/researchpapers/Brain_Sort-An_Automatic_Analysis_Toolkit_for_AD_Neuroimaging_Data.pdf">Brain Sort - An Automatic Analysis Toolkit for AD Neuroimaging Data</a></li>
 			<li><a href="https://sylphrena.github.io/researchpapers/A_support_vector_machine_based-method_to_identify_subjective_cognitive_decline_with_multi-modal_imaging.pdf">A support vector machine-based method to identify subjective cognitive decline with multi-modal</a></li>
 		</ul></li>
-	<li>Extended Essay on Artificial Intelligence (AI), consciousness, and self-consciousness
-
-		<ul>
-			<li><a href="https://sylphrena.github.io/researchpapers/The_criteria_for_Artificial_ntelligence_to_possess_consciousness_and_self-consciousness_as_conditions_of_personhood.pdf">The criteria for Artificial Intelligence to possess consciousness and self-consciousness as conditions of personhood</a></li>
-		</ul></li>
 	<li>Research on AQI index in Shanghai (Chinese)
 
 		<ul>
 			<li><a href="https://sylphrena.github.io/researchpapers/%E4%B8%8A%E6%B5%B7%E5%B8%82%E7%A9%BA%E6%B0%94%E8%B4%A8%E9%87%8F%E7%8A%B6%E5%86%B5%E5%88%86%E6%9E%90%E4%B8%8E%E9%A2%84%E6%B5%8B.pdf">上海市空气质量状况分析与预测</a></li>
 		</ul></li>
+</ol>
+
+<h2>Others</h2>
+
+<ol>
 	<li>Research on procrastination (Chinese)
 
 		<ul>
@@ -38,6 +60,29 @@
 		</ul></li>
 </ol>
 
+
+
+	<script type='text/javascript'>
+		tippy('.footnote-popover', {
+			  position: 'bottom',
+			  trigger:'click',
+			  theme:'footnote',
+			  interactive:'true',
+			  arrow:'true',
+			  arrowSize:'big',
+			  popperOptions: {
+				  modifiers: {
+					  flip: {
+					  behavior: ['bottom', 'top']
+					  },
+					  preventOverflow: {
+					  enabled: true,
+					  boundariesElement:'viewport'
+					  }
+				  }
+			  }
+		})
+	</script>
 </body>
 </html>
 
