--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<ul>
 			<li><a href="https://sylphrena.github.io/researchpapers/Brain_Sort-An_Automatic_Analysis_Toolkit_for_AD_Neuroimaging_Data.pdf">Brain Sort - An Automatic Analysis Toolkit for AD Neuroimaging Data</a></li>
-			<li><a href="https://sylphrena.github.io/researchpapers/A_support_vector_machine_based-method_to_identify_subjective_cognitive_decline_with_multi-modal_imaging.pdf">A support vector machine-based method to identify subjective cognitive decline with multi-modal</a></li>
+			<li><a href="https://sylphrena.github.io/researchpapers/Early_Stage_Identification_and_Pathological_Development_of_Alzheimer%E2%80%99s_Disease_Using_Multimodal_MRI.pdf">Early-Stage Identification and Pathological Development of Alzheimer’s Disease Using Multimodal MRI</a></li>
 		</ul></li>
 	<li>Research on AQI index in Shanghai (Chinese)
 
